Ajustando o dominio de grupos para estar dentro do padrão estabelicido e criando documentação do mesmo para o projeto
