# backend/src/domain/user/http/dtos/IUserResponse.ts
@@ -12,9 +12,6 @@ export class UserResponse implements IUserResponse {
     updated_at: Date | null;
 
     constructor(data: IUserResponse) {
-        this.id = data.id;
-        this.name = data.name;
-        this.created_at = data.created_at;
-        this.updated_at = data.updated_at;
+        Object.assign(this, data);
     }
 }
